Add new game functionality

--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
         <footer>
             Made by oyasumi58 | Project from TOP
         </footer>
+        <dialog>
+            <div>
+                <h3 id="winnerLabel">CONGRATULATIONS!</h3>
+                <p id="scoreDisplay"></p>
+                <div>
+                    <button type="button" id="confirmButton">Reset Game</button>
+                </div>
+            </div>
+        </dialog>
     </div>
 </body>
 </html>
